	* Removed supybot.reply.withPrivateNotice and split it into two
	separate configuration variables, supybot.reply.withNotice and
	supybot.reply.inPrivate.
	
	* Added supybot.log.stdout.wrap, to allow optional (defaulting to
	True) wrapping of stdout logs.
	
	* Added supybot.databases.plugins.channelSpecific, a channel
	value that determines whether the database used for channel-based
	plugins will be a channel-specific database or a global database.
	
	* Changed the way channel databases are handled; instead of
	generating numerous #channel-<name> files, instead we create a
	subdirectory of the data directory named #channel, and then stick
	all the files in there.
	
	* Added several configuration variables to the Status plugin to
	determine how verbose the cpu command is.
	
	* Added a configuration variable to the Dunno plugin,
	supybot.plugins.Dunno.prefixNick, which determines whether the
	bot will prefix the nick of the user giving an invalid command to
	its "dunno" response.  Formerly, it never would; the default for
	this variable, however, is True, because that's how the rest of
	Supybot works.
	
	* Added Owner.rename, a command for renaming commands in other
	plugins.
	
	* Added a new plugin, Tail, which will tail logfiles and send the
	new lines to a configurable list of targets.
	
	* Added Config.channel, for getting/setting channel configuration
	variables.
	
	* Fixed the problem with channels with dots or colons in them
	raising exceptions whenever the registry was accessed.
	
	* Changed Fun.roulette to use a 6-barrel revolver.
	
	* Changed Bugzilla to use the registry, rather than a custom
	flatfile database format.
	
	* Added the KeepAlive plugin, to send useless keepalive messages
	to someone every some period.  It's mostly just because we
	noticed that MozBot had one, and we couldn't allow ourselves to
	be outdone.
	
	* Changed the URL plugin to use flatfiles rather than SQLite
	database.  Also reduced the functionality of the last command by